--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -26,25 +26,22 @@
     </div>
 
     <div class="list">
-      <a class="item" href="#/tab/hotel">
-        <i class="ion-shineiwifi"></i>
-        <i class="ion-wifi"></i>
-        <i class="ion-tingche"></i>
-        <i class="ion-feng"></i>
-        <i class="ion-24xiaoshireshui"></i>
-        <i class="ion-feiji2"></i>
-        <i class="ion-jinzhixiyan"></i>
+      <a class="item row" href="#/tab/hotel">
+        <i class="ion-shineiwifi col"></i>
+        <i class="ion-wifi col"></i>
+        <i class="ion-tingche col"></i>
+        <i class="ion-feng col"></i>
+        <i class="ion-24xiaoshireshui col"></i>
+        <i class="ion-feiji2 col"></i>
+        <i class="ion-jinzhixiyan col"></i>
       </a>
-    </div>
-
-    <a class="item" href="#/tab/date">
-      <i class="ion-rili"></i>
+    <a class="item item-button-right href="#/tab/date"">
+    <i class="ion-rili"></i>
       12月01日-12月02日
-      <span class="item-note positive">
-        共1晚>
-      </span>
-    </a>
-
+    <button class="button button-clear">
+      <h3 class="positive">共1晚><h3>
+    </button>
+  </a>
   <a class="item" href="#/tab/confirmOrder">
     <h2>景观大床房</h2>
     <p>55平米大床1.8m有wifi</p>
