--- a/Application/Home/View/Index/indexPersonalCenter.html
+++ b/Application/Home/View/Index/indexPersonalCenter.html
@@ -8,16 +8,16 @@
 			<p>手机号</p>
 		</a>
 
-		<div class="item row">
-			<a href="#/tab/toBePaid" class="col button  button-light">
+		<div class="button-bar">
+			<a href="#/tab/toBePaid" class="button button-light">
 				<i class="icon ion-daizhifu"></i>
 				<p>待支付</p>
 			</a>
-			<a href="#/tab/toBeEvaluation" class="col button  button-light">
+			<a href="#/tab/toBeEvaluation" class="button button-light">
 				<i class="icon ion-daipingjia2"></i>
 				<p>待评价</p>
 			</a>
-			<a href="#/tab/toBeStay" class="col button  button-light">
+			<a href="#/tab/toBeStay" class="button button-light">
 				<i class="icon ion-ruzhu"></i>
 				<p>待入住</p>
 			</a>
