--- a/Application/Home/View/Index/indexHome.html
+++ b/Application/Home/View/Index/indexHome.html
@@ -35,7 +35,7 @@
         <i class="ion-feiji2 col"></i>
         <i class="ion-jinzhixiyan col"></i>
       </a>
-    <a class="item item-button-right href="#/tab/date"">
+    <a class="item item-button-right" href="#/tab/date">
     <i class="ion-rili"></i>
       12月01日-12月02日
     <button class="button button-clear">
