--- a/Application/Home/View/Index/indexToBeEvaluation.html
+++ b/Application/Home/View/Index/indexToBeEvaluation.html
@@ -7,10 +7,10 @@
 		      <h2>价格：￥99.9</h2>
 		      <p>介绍:大床房</p>
 		      <p>入住时间:2015.11.23</p>
-                 <div class="button button-icon-right button-small button-positive
+                 <a href="#/tab/evaluationing1"><div class="button button-icon-right button-small button-positive
                  pull button-right">
                 评价赢积分
-		    	</div>
+		    	</div></a>
 		    </div>
 
 		    <div class="item item-thumbnail-left" href="#">
@@ -18,10 +18,10 @@
 		      <h2>价格：￥99.9</h2>
 		      <p>介绍:大床房</p>
 		      <p>入住时间:2015.11.23</p>
-                 <div class="button button-icon-right button-small button-positive
+                 <a href="#/tab/evaluationing1"><div class="button button-icon-right button-small button-positive
                  pull button-right">
                 评价赢积分
-		    	</div>
+		    	</div></a>
 		    </div>
 
 		    <div class="item item-thumbnail-left" href="#">
@@ -29,10 +29,10 @@
 		      <h2>价格：￥99.9</h2>
 		      <p>介绍:大床房</p>
 		      <p>入住时间:2015.11.23</p>
-                 <div class="button button-icon-right button-small button-positive
+                 <a href="#/tab/evaluationing1"><div class="button button-icon-right button-small button-positive
                  pull button-right">
                 评价赢积分
-		    	</div>
+		    	</div></a>
 			</div>
 
 		    <div class="item item-thumbnail-left" href="#">
@@ -40,10 +40,10 @@
 		      <h2>价格：￥99.9</h2>
 		      <p>介绍:大床房</p>
 		      <p>入住时间:2015.11.23</p>
-                 <div class="button button-icon-right button-small button-positive
+                 <a href="#/tab/evaluationing1"><div class="button button-icon-right button-small button-positive
                  pull button-right">
                 评价赢积分
-		    	</div>
+		    	</div></a>
 		    </div>
 
 		    <div class="item item-thumbnail-left" href="#">
@@ -51,10 +51,10 @@
 		      <h2>价格：￥99.9</h2>
 		      <p>介绍:大床房</p>
 		      <p>入住时间:2015.11.23</p>
-                 <div class="button button-icon-right button-small button-positive
+                 <a href="#/tab/evaluationing1"><div class="button button-icon-right button-small button-positive
                  pull button-right">
                 评价赢积分
-		    	</div>
+		    	</div></a>
 		    </div> 
 
 		    <div class="item item-thumbnail-left" href="#">
@@ -62,10 +62,10 @@
 		      <h2>价格：￥99.9</h2>
 		      <p>介绍:大床房</p>
 		      <p>入住时间:2015.11.23</p>
-                 <div class="button button-icon-right button-small button-positive
+                 <a href="#/tab/evaluationing1"><div class="button button-icon-right button-small button-positive
                  pull button-right">
                 评价赢积分
-		    	</div>
+		    	</div></a>
 		    </div>
 	    </div>
 	</ion-content>
