实现自定义菜单的动态添加

--- a/Application/Deng/View/Index/index.html
+++ b/Application/Deng/View/Index/index.html
@@ -1,6 +1,6 @@
 	<div>
         <a class="button"  href="{:U('add')}" >添加自定义菜单</a>
-        <a class="button"  href="{:U('add')}" >生成菜单至公众账号
+        <a class="button"  href="{:U('createMenu')}" >生成菜单至公众账号
 </a>
     </div>
 	<table>
