--- a/Application/Litian/View/User/edit.html
+++ b/Application/Litian/View/User/edit.html
@@ -1,4 +1,4 @@
-<form <eq name="Think.ACTION_NAME" value="edit"> action="{:U('update')}"<else />action="{:U('save')}"</eq> method="post">
+<form <eq name="Think.ACTION_NAME" value="edit"> action="{:U('update',I('get.'))}"<else />action="{:U('save',I('get.'))}"</eq> method="post">
 
 <input type="hidden" name="p" value="{$p}"></input>
 
