--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -29,7 +29,7 @@
 				<td>{$user[address]}</td>
 				<td>{$user[email]}</td>
 				<td><foreach name="M:getPostsByUserId($user['id'])" item="post">
-				
+				<!-- {:dump($post)} -->
 				{:$post['post_name']}
 				<br />
 				</foreach></td>
