--- a/Application/Litian/View/User/index.html
+++ b/Application/Litian/View/User/index.html
@@ -12,9 +12,7 @@
     <thead>
         <tr>
             <th>序号</th>
-            <?php $order = I('get.order') ?>
-            <th><a href="<eq name='order' value="desc"> {:U('index?order=asc',I('get.'))}
-            <else/> {:U('index?order=desc',I('get.'))} </eq>">ID</a></th>
+            <th><a href="M:getOrder()">ID</a></th>
             <th>NAME</th>
             <th>EMAIL</th>
             <th>PHONE</th>
@@ -31,7 +29,7 @@
             <td>{$user[phone]}</td>
             <td>
             <a class="button" href="{:U('detail?id='.$user['id'],I('get.'))}">查看</a>
-            <a class="button" href="{:U('edit',I('get.'))}">编辑</a>
+            <a class="button" href="{:U('edit?id='.$user['id'],I('get.'))}">编辑</a>
             <a class="button" href="{:U('delete?id='.$user['id'],I('get.'))}">删除</a>
         </tr>
     </foreach>
