--- a/Application/User/View/Index/detail.html
+++ b/Application/User/View/Index/detail.html
@@ -5,4 +5,4 @@
 <label>邮箱</label>:{$user[email]}</br>
 
 
-<a class="button" href="{:U('index?id='.$user['id'],I('get.p'))}">返回</a>
+<a class="button" href="{:U('index',I('get.'))}">返回</a>
