--- a/Application/Litian/View/User/index.html
+++ b/Application/Litian/View/User/index.html
@@ -20,7 +20,7 @@
         </tr>
     </thead>
     <tbody>
-    <foreach name="M:getUsers()" item="user" key="k">
+    <foreach name="users" item="user" key="k">
         <tr>
             <td>{$k+1}</td>
             <td>{$user[id]}</td>
