点列名能正逆排序

--- a/Application/Post/View/Index/index.html
+++ b/Application/Post/View/Index/index.html
@@ -3,8 +3,9 @@
 	<tr>
 		<th>序号</th>
 		<?php $order = I('get.order') ?>
-		<th><a href="<eq name='order' value="desc"> {:U('index?order=asc', I('get.'))}  
-		<else/> {:U('index?order=desc', I('get.'))} </eq>">ID</a></th>
+		<?php $by = I('get.by') ?>
+		<th><a href="<eq name='order' value="desc"> {:U('index?order=asc&by=id', I('get.'))}  
+		<else/> {:U('index?order=desc&by=id', I('get.'))} </eq>">ID</a></th>
 		<th>岗位</th>	
 	</tr>
 	<foreach name="M:getPosts()" item="post" key="k">
