--- a/Application/Post/View/Index/add.html
+++ b/Application/Post/View/Index/add.html
@@ -9,7 +9,8 @@
 	<form <eq name="Think.ACTION_NAME" value="add"> action="{:U('save',I('get'))}"<else />
 	action="{:U('update',I('get.'))}"</eq> method="post">
 
-	<input 
+	<label>岗位名</label><input type="text" name="name" value="{:$M->getPostName()}"><br />
+	<button type="submit">保存</button>
 
 
 
