--- a/Application/Post/View/Index/add.html
+++ b/Application/Post/View/Index/add.html
@@ -9,8 +9,7 @@
 	<form <eq name="Think.ACTION_NAME" value="add"> action="{:U('save',I('get'))}"<else />
 	action="{:U('update',I('get.'))}"</eq> method="post">
 
-	<label>岗位名</label><input type="text" name="name" value="{:$M->getPostName()}"><br />
-	<button type="submit">保存</button>
+	<input 
 
 
 
