--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -4,6 +4,7 @@
     <div>
         <a class="button"  href="{:U('Post/Index/index',I('get.'))}" >查看岗位</a>
     </div>
+    <div><a href="{:U('Account/Index/index')}">查看财务模块</a></div>
     <form action="{:U('index?p=', I('get.'))}" method="get">
     <div>
     	<input type="text" placeholder="search" name="keywords" value ="{:I('get.keywords')}"
