--- a/Application/Account/View/Index/index.html
+++ b/Application/Account/View/Index/index.html
@@ -21,6 +21,9 @@
 		<td>{$account[money]}</td>
 		<td>{$account[cost]}</td>
 		<td>{$account[status]}</td>
+		<td><a class="button" href="{:U('detail?id='.$user['id'],I('get.'))}">查看</a>&nbsp;&nbsp;
+		<a class="button" href="{:U('edit?id='.$account['id'], I('get.'))}">编辑</a>&nbsp;&nbsp;
+		<a class="button" href="{:U('delete?id='.$user['id'],I('get.'))}">删除</a></td>
 	</tr>
 	</foreach>
 </table>
