--- a/Application/Account/View/Index/index.html
+++ b/Application/Account/View/Index/index.html
@@ -26,6 +26,7 @@
 		<a class="button" href="{:U('delete?id='.$user['id'],I('get.'))}">删除</a></td>
 	</tr>
 	</foreach>
+	{:$M->MoneyTotal0()}
 </table>
 
 <Yunzhi:page />
