--- a/Application/Post/View/Index/index.html
+++ b/Application/Post/View/Index/index.html
@@ -1,6 +1,6 @@
 岗位概览
 	<div>
-        <a class="button"  href="{:U('add',I('get.'))}" >添加用户</a>
+        <a class="button"  href="{:U('add',I('get.'))}" >添加岗位</a>
     </div>
 <table>
 	<tr>
