--- a/Application/Account/View/Index/edit.html
+++ b/Application/Account/View/Index/edit.html
@@ -11,10 +11,12 @@
 
 	<input type="hidden" name="id" value="{$account.id}"></input>
 
-
-	<label>交易编号</label><input type ="text" name="id" value="{:$M->getAccountId()}" /></br>
+<!-- 
+	<label>交易编号</label><input type ="text" name="id" value="{:$M->getAccountId()}" /></br> -->
 	<label>交易金额</label><input type ="text" name="money" value="{:$M->getAccountMoney()}" /></br>
 	<label>交易时间</label><input type ="text" name="date" value="{:$M->getAccountDate()}" /></br>
+	<label>交易成本</label><input type ="text" name="date" value="{:$M->getAccountDate()}" /></br>
+	<label>利润</label><input type ="text" name="date" value="{:$M->getAccountDate()}" /></br>
 	<button type="submit">保存</button>
 	</form>
 </body>
