--- a/Application/User/View/Index/add.html
+++ b/Application/User/View/Index/add.html
@@ -13,6 +13,19 @@
 	<label>手机号：</label><input type ="text" name="phonenumber" value="{$user.phonenumber}" /></br>
 	<label>地址：</label><input type = "text" name="address" value="{$user.address}"/></br>
 	<label>邮箱：</label><input type = "text" name="email" value="{$user.email}"/></br>
+	<label>部门ID</label><input type = "text" name="dep_id" value="{$user.dep_id}"/></br>
+
+
+	<div><label>修改部门</label>
+    <label>人事
+    <input type="radio" value="1"  name="{user.dep_id}" /></label>
+    <label>财务
+    <input type="radio" value="2"  name="{user.dep_id}" /></label>
+    <label>仓库
+    <input type="radio" value="3"  name="{user.dep_id}" /></label>
+    <label>销售
+    <input type="radio" value="4"  name="{user.dep_id}" /></label>
+    </div>
 	<button type="submit">保存</button>
 	</form>
 	</body>
