--- a/Application/Login/View/Index/index.html
+++ b/Application/Login/View/Index/index.html
@@ -1,5 +1,38 @@
-<form action="{:U('Login/Index/login')}" method="post">
+
+<link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
+<!-- <form action="{:U('Login/Index/login')}" method="post">
 	<input type ="text" name="name" />
 	<input type = "password" name="password" />
-	<button type="submit">Login</button>
+	<button type="submit" class="btn btn-default">Login</button>
+</form> -->
+
+
+
+<form class="form-horizontal" action="{:U('Login/Index/login')}" method="post">
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">用戶名</label>
+    <div class="col-sm-8">
+      <input type="email" class="form-control" id="inputEmail3" placeholder="用戶名" name="name" >
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
+    <div class="col-sm-8">
+      <input type="password" class="form-control" id="inputPassword3" placeholder="密码" name="password">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox"> Remember me
+        </label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Sign in</button>
+    </div>
+  </div>
 </form>
