--- a/Application/Login/View/Index/index.html
+++ b/Application/Login/View/Index/index.html
@@ -8,11 +8,11 @@
 
 
 
-<form class="form-horizontal" action="{:U('Login/Index/login')}" method="post">
+<!-- <form class="form-horizontal" action="{:U('Login/Index/login')}" method="post">
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">用戶名</label>
     <div class="col-sm-8">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="用戶名" name="name" >
+      <input  type="text" class="form-control" id="inputEmail3" placeholder="用戶名" name="name" >
     </div>
   </div>
   <div class="form-group">
@@ -35,4 +35,40 @@
       <button type="submit" class="btn btn-default">Sign in</button>
     </div>
   </div>
-</form>
+</form> -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">请登录</h3>
+                    </div>
+                    <div class="panel-body">
+                        <!-- <form role="form"  id="loginform" method = 'post' action="{:U('Login/Index/login')}"> -->
+                            <form  action="{:U('Login/Index/login')}" method="post">
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="用户名" name="name" id="username" value="{:cookie('username')}">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="密码" name="password" id="password" type="password" value="{:cookie('password')}">
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                    <php>$isRemember = cookie('remember');</php>
+                                        <input type="checkbox" id="remember" <eq name="isRemember" value="1">checked="checked"</eq>>记住密码
+                                    </label>
+                                </div>
+                                <!-- Change this to a button or input when using this as a form -->
+                                <button class="btn btn-lg btn-success btn-block" id="login">登录</button>
+                                <php>if (APP_DEBUG==true): </php>
+                                <a href="{:U('Home/Index/index')}"  class="btn btn-lg btn-success btn-block">直接登录</a>
+                                <php>endif</php>
+                            </form>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
