--- a/Application/Sale/View/Index/index.html
+++ b/Application/Sale/View/Index/index.html
@@ -1,4 +1,4 @@
-财务概览
+销售信息一览表
 	<div>
         <a class="button"  href="{:U('add',I('get.'))}" >添加交易信息</a>
     </div>
@@ -15,7 +15,6 @@
 		<th>销售数量</th>
 		<th>销售金额</th>
 		<th>销售日期</th>
-
 	</tr>
 	<tr>
 	<td></td>
