添加表格样式

--- a/Application/Account/View/Index/index.html
+++ b/Application/Account/View/Index/index.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
-财务概览
+<h1>财务概览</h1>
 	<div>
-        <a class="button"  href="{:U('add',I('get.'))}" >添加财务信息</a>
+        <a  href="{:U('add',I('get.'))}" class="btn btn-primary" ><i class="glyphicon glyphicon-plus"></i>添加财务信息</a>
     </div>
 <table class="table table-bordered table-striped table-hover">
 	<tr>
