--- a/Application/Home/View/Index/indexc.html
+++ b/Application/Home/View/Index/indexc.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
 <h1>welcome {$user[user_name]}</h1>
 
 <a href="{:U('Warehouse/Index/index')}"><div>查看仓库信息</div></a>
