--- a/Application/Sale/View/Index/index.html
+++ b/Application/Sale/View/Index/index.html
@@ -1,8 +1,9 @@
-销售信息一览表
+<link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
+<h1>销售信息一览表</h1>
 	<div>
-        <a class="button"  href="{:U('add',I('get.'))}" >添加交易信息</a>
+        <a   href="{:U('add',I('get.'))}" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>添加交易信息</a>
     </div>
-<table>
+<table class="table table-bordered table-striped table-hover">
 	<tr>
 
 		<th>序号</th>
