--- a/Application/Account/View/Index/edit.html
+++ b/Application/Account/View/Index/edit.html
@@ -1,8 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
 	<title>添加修改财务数据</title>
+	<link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
 </head>
 
 <body>
