--- a/Application/Home/View/Index/indexb.html
+++ b/Application/Home/View/Index/indexb.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
+
 <h1>welcome {$user[user_name]}</h1>
 
 <a href="{:U('Account/Index/index')}"><div>查看财务信息</div></a>
