--- a/Application/Home/View/Index/indexd.html
+++ b/Application/Home/View/Index/indexd.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
 <h1>welcome {$user[user_name]}</h1>
 <a href="{:U('User/Index/index')}"><div>查看用户信息</div></a>
 <a href="{:U('Account/Index/index')}"><div>查看财务信息</div></a>
