--- a/Application/User/View/Index/add.html
+++ b/Application/User/View/Index/add.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>添加修改用户</title>
+	<link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
 </head>
 <body>
 	<form <eq name="Think.ACTION_NAME" value="add"> action="{:U('save',I('get.'))}"<else />action="{:U('update',I('get.'))}"</eq> method="post">
