--- a/Application/User/View/Index/detail.html
+++ b/Application/User/View/Index/detail.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
 <label>用户名</label>:{:$M->getUserName()}</br>
 <label>密码</label>:{:$M->getPassword()}</br>
 <label>手机号</label>:{$user[phonenumber]}</br>
