--- a/Application/Sale/View/Index/add.html
+++ b/Application/Sale/View/Index/add.html
@@ -10,9 +10,9 @@
     <form <eq name="Think.ACTION_NAME" value="add"> action="{:U('save',I('get'))}"<else />
     action="{:U('update',I('get'))}"</eq> method="post">
 
-    <!-- <input type="hidden" name="id" value="{$sale.id}"></input> -->
+    <input type="hidden" name="id" value="{:$M->getSaleId()}"></input>
 
-    <label>交易编号</label><input type ="text" name="id" value="{:$M->getSaleId()}" /></br>
+    
     <label>销售员工姓名</label><input type ="text" name="name" value="{:$M->getSaleName()}" /></br>
     <label>销售数量</label><input type ="text" name="count" value="{:$M->getSaleCount()}" /></br>
     <label>销售金额</label><input type ="text" name="sum_money" value="{:$M->getSaleSum_money()}" /></br>
