销售计入财务仓库模块

--- a/Application/Warehouse/View/Index/index.html
+++ b/Application/Warehouse/View/Index/index.html
@@ -34,7 +34,7 @@
 		<td>{$warehouse[id]}</td>
 		<td>{$warehouse[date]}</td>
 		
-		<td>{$warehouse[change]}</td>
+		<td>{$warehouse[count]}</td>
 		<td>{$warehouse[surplus]}</td>
 		<td><a class="button" href="{:U('detail?id='.$warehouse['id'],I('get.'))}">查看</a>&nbsp;&nbsp;
 		<a class="button" href="{:U('edit?id='.$warehouse['id'], I('get.'))}">编辑</a>&nbsp;&nbsp;
