--- a/Application/Warehouse/View/Index/edit.html
+++ b/Application/Warehouse/View/Index/edit.html
@@ -14,7 +14,7 @@
 
 	<label>时间</label><input type ="text" name="date" value="{:$M->getDate()}" /></br>
 	<label>货物改变量</label><input type ="text" name="count" value="{:$M->getChange()}" /></br>
-	<label>剩余库存</label><input type ="text" name="surplus" value="{:$M->getSurplus()}" /></br>
+	<!-- <label>剩余库存</label><input type ="text" name="surplus" value="{:$M->getSurplus()}" /></br> -->
 
 	<button type="submit">保存</button>
 	</form>
