界面以及引用的样式

--- a/Application/Sale/View/Index/add.html
+++ b/Application/Sale/View/Index/add.html
@@ -1,4 +1,3 @@
-<link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,7 +11,7 @@
 
     <!-- <input type="hidden" name="id" value="{$sale.id}"></input> -->
 
-    <label>交易编号</label><input type ="text" name="id" value="{:$M->getSaleId()}" /></br>
+<!--     <label>交易编号</label><input type ="text" name="id" value="{:$M->getSaleId()}" /></br> -->
     <label>销售员工姓名</label><input type ="text" name="name" value="{:$M->getSaleName()}" /></br>
     <label>销售数量</label><input type ="text" name="count" value="{:$M->getSaleCount()}" /></br>
     <label>销售金额</label><input type ="text" name="sum_money" value="{:$M->getSaleSum_money()}" /></br>
