--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
-<h1>welcome {$user[user_name]}</h1>
+<h1>welcome {$user[name]}</h1>
 <a href="{:U('User/Index/index')}"><div>查看用户信息</div></a>
 <a href="{:U('Account/Index/index')}"><div>查看财务信息</div></a>
 <a href="{:U('Warehouse/Index/index')}"><div>查看仓库信息</div></a>
