--- a/Application/Sale/View/Index/index.html
+++ b/Application/Sale/View/Index/index.html
@@ -17,14 +17,8 @@
 		<th>销售金额</th>
 		<th>销售日期</th>
 		<th>操作</th>
-	</tr>
-	<tr>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	</tr>
+		
+
 	<foreach name=	"M:getSale()" item="sale" key="k">  
 	<!-- 定义了getSale返回的值还还有K次循环 -->
 	<tr>
@@ -39,7 +33,16 @@
 		<a class="button" href="{:U('delete?id='.$sale['id'],I('get.'))}">删除</a>
 		</td>
 	</tr>
-	</foreach>	
+	</foreach>
+	<tr>
+	<td>总计</td>
+	<td></td>
+	<td></td>
+	
+	
+	<td>{:$M->SaleCountTotal0()}</td>
+	<td>{:$M->SaleMoneyTotal0()}</td>
+	</tr>	
 </table>
 <Yunzhi:page />
 <style type="text/css">
