--- a/Application/User/View/Index/add.html
+++ b/Application/User/View/Index/add.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 	<form <eq name="Think.ACTION_NAME" value="add"> action="{:U('save',I('get.'))}"<else />action="{:U('update',I('get.'))}"</eq> method="post">
-	<input type="hidden" name="id" value="{$user.id}"></input>
+	<input type="hidden" name="id" value="{:$M->getId()}"></input>
 	<label>用户名：</label><input type ="text" name="name" value="{:$M->getUserName()}" /></br>
 	<label>密码：</label><input type = "password" name="password" value="{:$M->getPassword()}"/></br>
-	<label>确认密码：</label><input type = "password" name="repassword" value="{$user.repassword}"/></br>
-	<label>手机号：</label><input type ="text" name="phonenumber" value="{$user.phonenumber}" /></br>
-	<label>地址：</label><input type = "text" name="address" value="{$user.address}"/></br>
-	<label>邮箱：</label><input type = "text" name="email" value="{$user.email}"/></br>
-	<!-- <label>部门ID</label><input type = "text" name="dep_id" value="{$user.dep_id}"/></br> -->
+	<label>确认密码：</label><input type = "password" name="repassword" value="{:$M->getPassword()}"/></br>
+	<label>手机号：</label><input type ="text" name="phonenumber" value="{:$M->getPhone()}" /></br>
+	<label>邮箱：</label><input type="text" name="phonenumber" value="{:$M->getMail()}" /></br>
 
+	
+	
 
 	<div><label>修改部门</label>
     <label>人事
@@ -26,6 +26,13 @@
     <input type="radio" value="3"  name="dep_id" /></label>
     <label>销售
     <input type="radio" value=4  name="dep_id" /></label>
+    </div>
+    <div><label>修改级别</label>
+	<label>经理</label>
+	<input type="radio" value="2"  name="level" /></label>
+	<label>普通员工</label>
+	<?php $le = 1; ?>
+	<input type="radio" value="1"  name="level" <eq name="level" value="le">checked="checked"</eq> /></label>
     </div>
 	<button type="submit">保存</button>
 	</form>
