--- a/Application/Account/View/Index/index.html
+++ b/Application/Account/View/Index/index.html
@@ -1,5 +1,10 @@
 <link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
-<h1>财务概览</h1>
+<h1>财务概览
+<div class = "pull-right">
+    <i class="fa fa-user"></i>
+    <a href="{:U('Login/Index/logout')}">注销</a>	
+  </div>
+</h1>
 	<div>
         <a  href="{:U('add',I('get.'))}" class="btn btn-primary" ><i class="glyphicon glyphicon-plus"></i>添加财务信息</a>
     </div>
