--- a/Application/Sale/View/Index/index.html
+++ b/Application/Sale/View/Index/index.html
@@ -1,5 +1,13 @@
 <link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
-<h1>销售信息一览表</h1>
+<!-- FontAwesome Icons -->
+<link rel="stylesheet" href="__CSS__/font-awesome.min.css">
+
+<h1>销售信息一览表
+  <div class = "pull-right">
+    <i class="fa fa-user"></i>
+    <a href="{:U('Login/Index/logout')}">注销</a>	
+  </div>
+</h1>
 	<div>
         <a   href="{:U('add',I('get.'))}" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>添加交易信息</a>
     </div>
