--- a/Application/Login/View/Index/index.html
+++ b/Application/Login/View/Index/index.html
@@ -7,7 +7,8 @@
     <title>Starnight - A Sexy As Hell Free HTML5/CSS3 Template</title>
     <!-- Bootstrap -->
     <link href="__CSS__/bootstrap.min.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
+    <link href="__CSS__/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="__CSS__/flexslider.css" type="text/css">
     <link href="__CSS__/styles.css?v=1.6" rel="stylesheet">
     <link href="__CSS__/queries.css?v=1.6" rel="stylesheet">
@@ -169,7 +170,8 @@
 </script>
 
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-      <script src="http://ajax.useso.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+      <!--<script src="http://ajax.useso.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>-->
+      <script src="__JS__/vendor/jquery-1.10.1.min.js"></script>
       <script src="__JS__/jquery.fancybox.pack.js"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
       <script src="__JS__/bootstrap.min.js"></script>
