--- a/Application/Account/View/Index/index.html
+++ b/Application/Account/View/Index/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="__CSS__/bootstrap.min.css">
+<link rel="stylesheet" href="__CSS__/font-awesome.min.css">
 <h1>财务概览
 <div class = "pull-right">
     <i class="fa fa-user"></i>
