--- a/Application/Home/View/Index/index1.html
+++ b/Application/Home/View/Index/index1.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col-md- col-sm-2 col-xs-12">
                         <ul class="social-top">
-                            <li><a href="#"><i class="fa fa-twitter"></i><span class="hidden-xs">您好，{$user['name']}</span></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i><span class="hidden-xs">{$user['name']},您好!</span></a></li>
                             <li><a href="{:U('Login/Index/logout')}">   <i class="fa fa-user"></i><span class="hidden-xs">注销</span></a></li>
                         </ul>
                     </div>
