--- a/Application/User/View/Index/add.html
+++ b/Application/User/View/Index/add.html
@@ -12,7 +12,7 @@
 	<label>密码：</label><input type = "password" name="password" value="{:$M->getPassword()}"/></br>
 	<label>确认密码：</label><input type = "password" name="repassword" value="{:$M->getPassword()}"/></br>
 	<label>手机号：</label><input type ="text" name="phonenumber" value="{:$M->getPhone()}" /></br>
-	<label>邮箱：</label><input type="text" name="phonenumber" value="{:$M->getMail()}" /></br>
+	<label>邮箱：</label><input type="text" name="mailbox" value="{:$M->getMail()}" /></br>
 
 	<?php $dep = $M->getDepartmentId(); ?>
 	<div>
