--- a/Application/User/View/Index/index.html
+++ b/Application/User/View/Index/index.html
@@ -39,7 +39,7 @@
 				<td>{$user[id]}</td>
 				<td>{$user[name]}</td>
 				<td>{$user[phonenumber]}</td>
-				<td>{$user[email]}</td>
+				<td>{$user[mailbox]}</td>
 				<td>
 				<foreach name="M:getDepartmentsByUserId($user['id'])" item="department">
 				<!-- {:dump($department)} -->
